--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          file: 'releases/21.0.0.9/full/Dockerfile.ubuntu.openjdk8'
-          context: 'releases/21.0.0.9/full'
+          file: 'releases/latest/full/Dockerfile.ubuntu.openjdk8'
+          context: 'releases/latest/full'
           tags: ghcr.io/${{github.repository_owner}}/open-liberty:full
